피드백을 반영한 결과를 추가하여 README 작성

--- a/당근마켓 앱 개발 과제.md
+++ b/당근마켓 앱 개발 과제.md
@@ -1,4 +1,4 @@
-# 당근마켓 웹 개발 과제
+# [Feedback 반영] 당근마켓 웹 개발 과제
 
 
 
@@ -17,6 +17,592 @@
 - 깃헙:  https://github.com/DylanMsK/daangn
 
 
+
+
+
+## 피드백 반영
+
+### 프론트엔드
+
+##### 1. 서버로부터 받은 에러(5xx, 4xx 등)에 대해 처리를 하는가?
+
+django.conf.ulrs 모듈에 내장되어 있는 함수를 오버라이드 해서 에러 핸들링을 적용.
+
+```python
+# config/urls.py
+from django.conf.urls import handler400, handler404, handler500
+
+handler400 = "base.views.error400"
+handler404 = "base.views.error404"
+handler500 = "base.views.error500"
+
+
+# base/views.py
+def error400(request, exception):
+    return render(request, "404.html", status=400)
+
+
+def error404(request, exception):
+    return render(request, "404.html", status=404)
+
+
+def error500(request):
+    return render(request, "500.html", status=500)
+```
+
+
+
+### 백엔드
+
+##### 2. 보안에 취약한 쿼리(예: SQL Injection)가 발생하지 않도록 처리를 하는가? 
+
+DB 조회와 생성 등의 쿼리가 발생하는 모든곳에 SQL Injection을 고려합니다.
+
+**[products/views.py](https://github.com/DylanMsK/daangn/blob/master/products/views.py)**
+
+```python
+# 클라이언트는 허가된 카테고리만 조회 가능합니다.
+
+CATEGORY_DICT = {
+    "car": "차량",
+    "hot": "인기매물",
+    "furniture": "가구/인테리어",
+    "children": "유아동/유아도서",
+    "life": "생활/가공식품",
+    "etc": "기타",
+}
+
+def get(self, request, *args, **kwargs):
+  category = CATEGORY_DICT.get(kwargs.get("category"))
+  if category is None:
+    return redirect("products:home")
+  else:
+    form = forms.FilterForm(request.GET)
+    if form.is_valid():
+      queryset = self.get_queryset(
+        category=category, filter_args=form.cleaned_data
+      )
+      context = self.get_context_data(object_list=queryset)
+      else:
+        queryset = self.get_queryset(category)
+        context = self.get_context_data(object_list=queryset)
+        context["form"] = form
+        context.update(**form.cleaned_data)
+        return render(request, "products/product_list.html", context)
+```
+
+
+
+**[products/validators.py](https://github.com/DylanMsK/daangn/blob/master/products/validators.py)**
+
+```python
+# 카테고리별 정해진 필드만 DB에 입력 받고 이 외의 데이터는 삭제합니다.
+
+GENERAL_FIELDS = ["user", "image", "title", "category", "price", "describe"]
+CAR_FIELDS = ["year", "driven_distance", "smoking"]
+LEGACY_FIELDS = []
+
+def delete_wrong_fields(self, category):
+  if category.name == "차량":
+    for field in self.GENERAL_FIELDS + self.CAR_FIELDS:
+      self.cleaned_data[field] = self.data[field]
+
+      else:
+        for field in self.GENERAL_FIELDS + self.LEGACY_FIELDS:
+          self.cleaned_data[field] = self.data[field]
+```
+
+
+
+##### 3. RESTful하게 URI와 method를 사용하고 있는가?
+
+상품을 조회하고 생성하는 URL을 직관적으로 변경하고 HTTP 메소드별 CRUD 로직을 적용
+
+이번 프로젝트에서는 Django Rest Framework(DRF) 모델이 아닌 Model Template View(MTV) 모델을 사용해 Django 풀스택으로 작업했기 때문에 완성도 높은 REST 구조를 따르지 못했습니다. 하지만 허가하지 않은 HTTP method로 접근시 에러를 발생시켜 안정도를 높혔습니다.
+
+**[products/urls.py](https://github.com/DylanMsK/daangn/blob/master/products/urls.py)**
+
+```python
+app_name = "products"
+urlpatterns = [
+    path("", views.HomeView.as_view(), name="home"),
+    path("register/", views.register, name="register"),
+    path(
+        "products/<int:pk>/", views.ProductDetailView.as_view(), name="product_detail",
+    ),
+    path(
+        "products/<str:category>/",
+        views.CategoryListView.as_view(),
+        name="category_list",
+    ),
+]
+```
+
+
+
+**[products/views.py](https://github.com/DylanMsK/daangn/blob/master/products/views.py)**
+
+```python
+@login_required(login_url="/users/login/")
+def register(request):
+    if request.method == "POST":
+        form = forms.RegisterProductForm(request.POST, request.FILES, user=request.user)
+        if form.is_valid():
+            product = form.save()
+            return redirect("products:product_detail", pk=product.id)
+    elif request.method == "GET":
+        form = forms.RegisterProductForm(user=request.user)
+        return render(request, "products/product_create.html", {"form": form})
+    else:
+        return redirect("products:home")
+```
+
+
+
+##### 4. 데이터를 가져올 때 성능(예: N+1 쿼리 처리)을 고려했는가?
+
+Django ORM이 제공하는 쿼리 최적화 메소드를 사용해 중복되는 쿼리와 유사한 쿼리를 제거해 성능을 높혔습니다.
+
+##### 수정 전
+
+메인 페이지에서 모든 상품 리스트를 조회할 시 `models.Product.objects.all()` 을 사용해 **총 26개의 쿼리문을 사용**합니다. 이 중 24개의 유사한 쿼리가 있고 12개의 중복 쿼리가 포함되어 있으며 총 시간은 **4.23ms**가 소요되었습니다.
+
+```python
+# products/views.py
+def get_queryset(self):
+    queryset = models.Product.objects.all()
+    return queryset
+```
+
+![수정 전](/Users/dylan/Desktop/github/daangn/readme/img/수정 전.png)
+
+
+
+##### 수정 1
+
+상품 당 카테고리가 1:N 관계로 잡혀있기 때문에 상품에 카테고리 이름 정보를 조인해 카테고리를 다시 조회하는 중복쿼리를 제거했습니다. 결과적으로 26개의 **쿼리가 14개로 줄어**들었고 총 시간은 **1.96ms**로 줄었습니다.
+
+```python
+def get_queryset(self):
+    queryset = models.Product.objects.select_related("category").all()
+    return queryset
+```
+
+![카테고리 조인](/Users/dylan/Desktop/github/daangn/readme/img/카테고리 조인.png)
+
+
+
+##### 수정 2
+
+상품 정보에 카테고리를 조인한 것과 마찬가지로 상품당 이미지 정보도 조인을 해 유사한 쿼리를 제거했습니다. 결과적으로 26개의 **쿼리가 3개로 줄어**들었고 총 시간은 **0.83ms** 로 줄었습니다.
+
+```python
+def get_queryset(self):
+    queryset = (
+      models.Product.objects.prefetch_related(
+        Prefetch("images", queryset=models.Image.objects.all(), to_attr="image")
+      )
+      .select_related("category")
+      .all()
+    )
+  return queryset
+```
+
+![이미지 조인](/Users/dylan/Desktop/github/daangn/readme/img/이미지 조인.png)
+
+
+
+### 데이터베이스
+
+##### 5. 성능을 고려하여 인덱스를 추가했는가?
+
+카테고리 테이블의 **카테고리 이름** 필드와 **차량 연식**, **차량 주행거리** 필드에 추가적인 인덱스를 주었습니다. 명세에는 차량 이외의 카테고리에 대한 필터링 조건은 없었기 때문에 차량 테이블에만 인덱스를 주었습니다.
+
+결과적으로 `Category`, `Product`, `Car`, `Image` 테이블의 SQL은 아래와 같습니다.
+
+```sql
+BEGIN;
+--
+-- Create model Category
+--
+CREATE TABLE "products_category" ("id" integer NOT NULL PRIMARY KEY AUTOINCREMENT, "created" datetime NOT NULL, "updated" datetime NOT NULL, "name" varchar(30) NOT NULL);
+--
+-- Create model Product
+--
+CREATE TABLE "products_product" ("id" integer NOT NULL PRIMARY KEY AUTOINCREMENT, "created" datetime NOT NULL, "updated" datetime NOT NULL, "title" varchar(120) NOT NULL, "price" integer unsigned NOT NULL CHECK ("price" >= 0), "describe" text NOT NULL, "category_id" integer NOT NULL REFERENCES "products_category" ("id") DEFERRABLE INITIALLY DEFERRED, "user_id" integer NOT NULL REFERENCES "users_user" ("id") DEFERRABLE INITIALLY DEFERRED);
+--
+-- Create model Car
+--
+CREATE TABLE "products_car" ("product_ptr_id" integer NOT NULL PRIMARY KEY REFERENCES "products_product" ("id") DEFERRABLE INITIALLY DEFERRED, "year" integer unsigned NOT NULL CHECK ("year" >= 0), "driven_distance" integer unsigned NOT NULL CHECK ("driven_distance" >= 0), "smoking" bool NOT NULL);
+--
+-- Create model Image
+--
+CREATE TABLE "products_image" ("id" integer NOT NULL PRIMARY KEY AUTOINCREMENT, "created" datetime NOT NULL, "updated" datetime NOT NULL, "image" varchar(100) NOT NULL, "product_id" integer NOT NULL REFERENCES "products_product" ("id") DEFERRABLE INITIALLY DEFERRED);
+CREATE INDEX "products_category_name_0ecfb368" ON "products_category" ("name");
+CREATE INDEX "products_product_category_id_9b594869" ON "products_product" ("category_id");
+CREATE INDEX "products_product_user_id_e04f062e" ON "products_product" ("user_id");
+CREATE INDEX "products_car_year_87247a66" ON "products_car" ("year");
+CREATE INDEX "products_car_driven_distance_27926a9b" ON "products_car" ("driven_distance");
+CREATE INDEX "products_image_product_id_978188e9" ON "products_image" ("product_id");
+COMMIT;
+```
+
+
+
+##### 6. column의 속성(예: nullable) 및 constraint(예: unique)을 지정했는가?
+
+`Category` 테이블의 카테고리 이름 필드에 null, unique 옵션을 주었습니다.
+
+```python
+class Category(base_models.TimeStampedModel):
+    name: str = models.CharField(
+        "카테고리명", db_index=True, null=False, unique=True, max_length=30
+    )
+```
+
+
+
+### 기타
+
+##### 7. 중복된 코드를 모듈/파일로 분리하여 처리를 하는가?
+
+사용자가 입력한 **폼을 validation하는 로직을 별도 묘듈로 분리**하였습니다. 상품 카테고리 **필터링 조건 또한 별도 모듈로 분리**해였고 **추후 확장 가능성을 고려해 필터링 클래스를 작성**했습니다.
+
+**[products/validators.py](https://github.com/DylanMsK/daangn/blob/master/products/validators.py)**
+
+```python
+import re
+from datetime import datetime
+from django.conf import settings
+from django.template.defaultfilters import filesizeformat
+from products import models as product_models
+from users import models as user_models
+
+
+class ProductRegisterValidator:
+    """
+    상품 등록시 폼 작성 유효성 검사
+    """
+
+    GENERAL_FIELDS = ["user", "image", "title", "category", "price", "describe"]
+    CAR_FIELDS = ["year", "driven_distance", "smoking"]
+    LEGACY_FIELDS = []
+
+    def __init__(self, user, data):
+        self.user = user
+        self.data = data
+        self.cleaned_data = {}
+        self.errors = []
+
+    def delete_wrong_fields(self, category):
+
+        if category.name == "차량":
+            for field in self.GENERAL_FIELDS + self.CAR_FIELDS:
+                self.cleaned_data[field] = self.data[field]
+
+        else:
+            for field in self.GENERAL_FIELDS + self.LEGACY_FIELDS:
+                self.cleaned_data[field] = self.data[field]
+
+    def general_validate(self):
+        """
+        공통된 필드 유효성 평가
+        """
+        image = self.data.get("image")
+        title = self.data.get("title")
+        category = self.data.get("category")
+        price = self.data.get("price")
+        describe = self.data.get("describe")
+
+        # 로그인된 사용자 체크
+        if not user_models.User.objects.filter(id=self.user.id).exists():
+            self.errors.append((None, "로그인된 사용자만 판매글을 작성할 수 있습니다."))
+        else:
+            self.data["user"] = user_models.User.objects.get(id=self.user.id)
+
+        # 이미지 업로드 체크
+        content_type = image.content_type.split("/")[0]
+        if content_type in settings.CONTENT_TYPES:
+            if image.size > settings.MAX_UPLOAD_SIZE:
+                self.errors.append(
+                    (
+                        "image",
+                        "10MB 이하의 이미지만 업로드할 수 있습니다. 현재 파일 용량: %s"
+                        % filesizeformat(image.size),
+                    )
+                )
+        else:
+            self.errors.append(("image", "이미지 파일만 첨부할 수 있습니다."))
+
+        # 제목 입력 체크
+        if title is None:
+            self.errors.append(("title", "제품 이름을 입력해주세요."))
+
+        # 카테고리 선택 체크
+        if category is None or category == 0:
+            self.errors.append(("category", "카테고리를 선택해주세요."))
+
+        # 가격 입력 체크
+        if price is None:
+            self.errors.append(("price", "가격을 입력해주세요. (￦)"))
+        else:
+            if price < 0 or price > 100000000:
+                self.errors.append(("price", "1억원 이하의 금액만 등록 가능합니다."))
+
+        # 설명 입력 체크
+        if describe is None:
+            self.errors.append(("describe", "제품 설명을 작성해주세요."))
+
+    def car_validate(self):
+        year = self.data.get("year")
+        driven_distance = self.data.get("driven_distance")
+        smoking = self.data.get("smoking")
+
+        # 연식 체크
+        if year is None:
+            self.errors.append(("year", "차량 연식을 선택해주세요."))
+        elif year < 1990 or year > 2020:
+            self.errors.append(("year", "1990년에서 2020년 사이에 제작된 차량만 등록 가능합니다."))
+
+        # 주행 거리 체크
+        if driven_distance is None or driven_distance == "":
+            self.errors.append(("driven_distance", "주행거리를 입력해주세요.(km)"))
+        elif driven_distance < 0 or driven_distance > 100000:
+            self.errors.append(
+                ("driven_distance", "주행거리가 0km에서 100,000km 까지의 차량만 등록 가능합니다.")
+            )
+
+        # 흡연 유무 체크
+        if smoking is None or smoking == "":
+            self.errors.append(("smoking", "흡연유무를 선택해 주세요."))
+
+    def check(self):
+        self.general_validate()
+        category_pk = self.data.get("category")
+        try:
+            category = product_models.Category.objects.get(pk=category_pk)
+            self.data["category"] = category
+        except product_models.Category.DoesNotExists:
+            return None, self.errors
+
+        if category.name == "차량":
+            self.car_validate()
+        # 다른 카테고리 유효성 검사
+        elif category.name == "something":
+            pass
+        self.delete_wrong_fields(category)
+        return self.cleaned_data, None
+
+
+class ProductFilterValidator:
+    def __init__(self, data):
+        self.data = data
+        self.cleaned_data = {}
+
+    def car_validate(self):
+        year = self.data.get("year")
+        driven_distance = self.data.get("driven_distance")
+        smoking = self.data.get("smoking")
+
+        # 연식 체크
+        default_min_year = product_models.Car.MIN_YEAR
+        default_max_year = datetime.now().year
+        if year is not None and re.match("^[\d]+,[\d]+$", year):
+            min_year, max_year = map(int, year.split(","))
+            if default_min_year <= min_year <= default_max_year:
+                self.cleaned_data["min_year"] = min_year
+            else:
+                self.cleaned_data["min_year"] = default_min_year
+
+            if default_min_year <= max_year <= default_max_year:
+                self.cleaned_data["max_year"] = max_year
+            else:
+                self.cleaned_data["max_year"] = default_max_year
+        else:
+            self.cleaned_data["min_year"] = default_min_year
+            self.cleaned_data["max_year"] = default_max_year
+
+        # 주행거리 체크
+        default_min_distance = product_models.Car.MIN_DRIVEN_DISTANCE
+        default_max_distance = product_models.Car.MAX_DRIVEN_DISTANCE
+        if driven_distance is not None and re.match("^[\d]+,[\d]+$", driven_distance):
+            min_distance, max_distance = map(int, driven_distance.split(","))
+            if default_min_distance <= min_distance <= default_max_distance:
+                self.cleaned_data["min_driven_distance"] = min_distance
+            else:
+                self.cleaned_data["min_driven_distance"] = default_min_distance
+
+            if default_min_distance <= max_distance <= default_max_distance:
+                self.cleaned_data["max_driven_distance"] = max_distance
+            else:
+                self.cleaned_data["max_driven_distance"] = default_max_distance
+
+        else:
+            self.cleaned_data["min_driven_distance"] = default_min_distance
+            self.cleaned_data["max_driven_distance"] = default_max_distance
+
+        # 흡연유무 체크
+        if smoking in ["total", True, False]:
+            self.cleaned_data["smoking"] = smoking
+        else:
+            self.cleaned_data["smoking"] = "total"
+
+    def check(self):
+        self.car_validate()
+        return self.cleaned_data
+```
+
+
+
+**[products/filters.py](https://github.com/DylanMsK/daangn/blob/master/products/filters.py)**
+
+```python
+from datetime import datetime
+from products import models
+
+
+class ProductFilter:
+    def __init__(self, filter_args):
+        self.filter_args = filter_args
+
+    def general_filter(self):
+        pass
+
+    def car_filter(self):
+        min_year = self.filter_args.get("min_year")
+        max_year = self.filter_args.get("max_year")
+        min_distance = self.filter_args.get("min_driven_distance")
+        max_distance = self.filter_args.get("max_driven_distance")
+        smoking = self.filter_args.get("smoking")
+
+        filter_args = {}
+
+        if min_year is not None:
+            filter_args["year__gte"] = min_year
+        else:
+            filter_args["year__gte"] = models.Car.MIN_YEAR
+
+        if max_year is not None:
+            filter_args["year__lte"] = max_year
+        else:
+            filter_args["year__lte"] = datetime.now().year
+
+        if min_distance is not None:
+            filter_args["driven_distance__gte"] = min_distance
+        else:
+            filter_args["driven_distance__gte"] = models.Car.MIN_DRIVEN_DISTANCE
+
+        if max_distance is not None:
+            filter_args["driven_distance__lte"] = max_distance
+        else:
+            filter_args["driven_distance__lte"] = models.Car.MAX_DRIVEN_DISTANCE
+        if smoking is not None:
+            if smoking != "total":
+                filter_args["smoking"] = smoking
+
+        return filter_args
+```
+
+
+
+##### 8. 하드코딩 없이 확장성을 고려하여 구현했는가?
+
+카테고리별로 별도 컨트롤러를 만든 이전의 코드를 하나로 통합해 모든 카테고리별 리스트를 조회하는 하나의 컨트롤러로 구현했습니다. 또한 확장성을 고려해 카테고리별 필터링 조건을 별도 모듈로 분리했습니다.
+
+**[products/views.py](https://github.com/DylanMsK/daangn/blob/master/products/views.py)**
+
+```python
+class CategoryListView(generic.ListView):
+    """
+    Categorized Product views
+    특정 카테고리의 상품 리스트를 보여주는 view
+    """
+
+    paginate_by = 12
+    ordering = "-created"
+
+    def get_queryset(self, category=None, filter_args=None):
+        if category == "차량":
+            queryset = models.Car.objects.all()
+            queryset = (
+                models.Car.objects.prefetch_related(
+                    Prefetch(
+                        "images", queryset=models.Image.objects.all(), to_attr="image"
+                    )
+                )
+                .select_related("category")
+                .all()
+            )
+            if filter_args is not None:
+                filter_args = filters.ProductFilter(filter_args).car_filter()
+                queryset = queryset.filter(**filter_args)
+        else:
+            queryset = (
+                models.Product.objects.prefetch_related(
+                    Prefetch(
+                        "images", queryset=models.Image.objects.all(), to_attr="image"
+                    )
+                )
+                .select_related("category")
+                .all()
+            )
+
+            for cat_eng, cat_kor in CATEGORY_DICT.items():
+                if cat_kor == category:
+                    queryset = queryset.filter(category__name=cat_kor)
+                    break
+
+        ordering = self.get_ordering()
+        if ordering:
+            if isinstance(ordering, str):
+                ordering = (ordering,)
+            queryset = queryset.order_by(*ordering)
+        return queryset
+
+    def get_context_data(self, *, object_list=None, **kwargs):
+        """Get the context for this view."""
+
+        paginator, page, queryset, is_paginated = self.paginate_queryset(
+            object_list, self.paginate_by
+        )
+        context = {
+            "paginator": paginator,
+            "page_obj": page,
+            "is_paginated": is_paginated,
+            "products": queryset,
+            "category": {
+                "eng_name": self.kwargs.get("category"),
+                "kor_name": CATEGORY_DICT.get(self.kwargs.get("category")),
+            },
+        }
+        context.update(kwargs)
+        return context
+
+    def get(self, request, *args, **kwargs):
+        category = CATEGORY_DICT.get(kwargs.get("category"))
+        if category is None:
+            return redirect("products:home")
+        else:
+            form = forms.FilterForm(request.GET)
+            if form.is_valid():
+                queryset = self.get_queryset(
+                    category=category, filter_args=form.cleaned_data
+                )
+                context = self.get_context_data(object_list=queryset)
+            else:
+                queryset = self.get_queryset(category)
+                context = self.get_context_data(object_list=queryset)
+            context["form"] = form
+            context.update(**form.cleaned_data)
+            return render(request, "products/product_list.html", context)
+
+```
+
+
+
+##### 9. 차량 외에는 상품이 등록되지 않아 감점합니다. (-20)
+
+차량 이외의 카테고리도 정상적으로 등록되게 구현하였고, 카테고리별 validation을 담당하는 로직을 별도 모듈로 분리([products/validators.py](https://github.com/DylanMsK/daangn/blob/master/products/validators.py))하고 중복 코드를 제거함과 동시에 확장성을 고려해 구현했습니다. 
 
 
 
@@ -70,18 +656,18 @@ whitenoise==4.1.4
 
 ```
 daangn/
-		...
-		users/
-				management/					# seed data 생성
-				migrations/					# 사용자 모델 schema
-				static/css/					# 사용자 로직에 관련된 페이지의 정적 파일 폴더 
-				admin.py						# 사용자 정보들을 관리하는 관리자페이지 커스터마이징
-				forms.py						# 로그인/회원가입 등 사용자 폼의 유효성 검사
-				models.py						# 사용자 모델 정의
-				tests.py						# 사용자 기능별 로직 테스트
-				urls.py							# 사용자 URL 경로
-        views.py						# 사용자 로직 컨트롤러
-		...
+    ...
+    users/
+        management/					# seed data 생성
+        migrations/					# 사용자 모델 schema
+        static/css/					# 사용자 로직에 관련된 페이지의 정적 파일 폴더 
+    admin.py						# 사용자 정보들을 관리하는 관리자페이지 커스터마이징
+    forms.py						# 로그인/회원가입 등 사용자 폼의 유효성 검사
+    models.py						# 사용자 모델 정의
+    tests.py						# 사용자 기능별 로직 테스트
+    urls.py							# 사용자 URL 경로
+    views.py						# 사용자 로직 컨트롤러
+    ...
 ```
 
 
@@ -90,18 +676,18 @@ daangn/
 
 ```
 daangn/
-		...
-		products/
-				management/					# seed data 생성
-				migrations/					# 상품 모델 schema
-				static/css/					# 상품 로직에 관련된 페이지의 정적 파일 폴더 
-				admin.py						# 상품 정보들을 관리하는 관리자페이지 커스터마이징
-				forms.py						# 판매글 작성 및 필터링 폼의 유효성 검사
-				models.py						# 상품 모델 정의
-				tests.py						# 상품 기능별 로직 테스트
-				urls.py							# 상품 URL 경로
-        views.py						# 상품 로직 컨트롤러
-		...
+    ...
+    products/
+        management/					# seed data 생성
+        migrations/					# 상품 모델 schema
+        static/css/					# 상품 로직에 관련된 페이지의 정적 파일 폴더 
+    admin.py						# 상품 정보들을 관리하는 관리자페이지 커스터마이징
+    forms.py						# 판매글 작성 및 필터링 폼의 유효성 검사
+    models.py						# 상품 모델 정의
+    tests.py						# 상품 기능별 로직 테스트
+    urls.py							# 상품 URL 경로
+    views.py						# 상품 로직 컨트롤러
+    ...
 ```
 
 
